--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: 2.2.0
   flutter_svg: ^1.0.3
+  google_maps_flutter: ^2.1.5
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
