--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_maps_flutter: ^2.1.5
   flutter_switch: ^0.3.2
   flutter_slidable: ^1.2.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
