--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.15
   provider: ^6.0.3
+  image_picker: ^0.8.3+2
   firebase_core: 
   firebase_messaging: 
   firebase_auth: 
