add excel download and delete disaster data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,17 @@ dependencies:
   cloud_firestore: 
   flutter_local_notifications:
   flutter_easyloading:
+  # excel: 
+  path_provider:
+  permission_handler:
+  syncfusion_flutter_xlsio: 
+  open_file: 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: "^0.9.2"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +73,14 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/launcher_icon.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/launcher_icon.png"
+
 
 # The following section is specific to Flutter.
 flutter:
